syntax = "proto3";
package pt.ulisboa.tecnico.tuplespaces.centralized.contract;

option java_multiple_files = true;

message PutRequest {
  string tuple = 1;
}
message PutResponse {
}

message ReadRequest {
  string pattern = 1;
}
message ReadResponse {
  string result = 1;
}

message TakeRequest {
  string pattern = 1;
}
message TakeResponse {
  string result = 1;
}

message GetTupleSpacesStateRequest {}
message GetTupleSpacesStateResponse {
  repeated string tuple = 1;
}

service TupleSpaces {
  rpc put(PutRequest) returns (PutResponse);
  rpc read(ReadRequest) returns (ReadResponse);
  rpc take(TakeRequest) returns (TakeResponse);
  rpc getTupleSpacesState(GetTupleSpacesStateRequest) returns (GetTupleSpacesStateResponse);
}